# Func-LLM

./: README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
fllme/: generate.py  media.py
func_llm/: errors.py
func_llm/auth/: __init__.py  builtins.py  google.py  header.py  types.py
func_llm/models/: deployment.py
func_llm/models/IO/: message.py
func_llm/models/IO/input/: image.py  main.py  provider.py  tools.py
func_llm/models/config/: __init__.py  cloud.py  settings.py
func_llm/models/input/: main.py
func_llm/providers/: __init__.py
func_llm/providers/anthropic/: __init__.py  vertex_v1.py  vertex_v2.py
func_llm/providers/openai/: __init__.py  azure_v2.py  azure_v3.py
func_llm/services/: __init__.py  http.py  types.py
func_llm/store/deployments/: sqlite.py
tests/: test_auth.py  test_models.py  test_openai_adapter.py  test_service.py  test_store_sqlite.py
