[project]
name = "func-llm"
version = "0.0.1"
description = "A functionnal oriented Python CLI for LLM calling with multi provider and multi model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "google>=3.0.0",
    "google-auth>=2.55.1",
    "marimo>=0.23.13",
    "mypy>=1.15",
    "pytest>=8.0",
    "requests>=2.32.4",
    "ruff>=0.11",
]
